--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,76 @@ table {
 }
 
 /* END OF CSS RESET */
+
+@font-face {
+	font-family: "Roboto-Regular";
+	font-weight: normal;
+	src: url(./fonts/Roboto-Regular.ttf)
+}
+
+@font-face {
+	font-family: "Roboto-Bold";
+	font-weight: bold;
+	src: url(./fonts/Roboto-Bold.ttf)
+}
+
+@font-face {
+	font-family: "Roboto-Thin";
+	font-weight: 100;
+	src: url(./fonts/Roboto-Thin.ttf)
+}
+
+:root {
+	font-family: "Roboto-Regular";
+}
+
+.container {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	height: 100vh;
+}
+
+.dashboard {
+	display: grid;
+	grid-template-rows: 3rem 0.3fr 0.15fr;
+	gap: 50px;
+	font-family: "Roboto-Bold", "Times New Roman", Times, serif;
+	background-color: royalblue;
+	color: white;
+	padding-left: 40px;
+}
+
+.dashboard img {
+	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+}
+
+
+.dashboard-header {
+	display: grid;
+	grid-template-columns: 40px 1fr;
+	align-items: center;
+	gap: 20px;
+	font-size: 2rem;
+	position: relative;
+	top: 20px;
+}
+
+.dashboard-header > img {
+	width: 40px;
+}
+
+.dashboard-list {
+	display: grid;
+	gap: 20px;
+}
+
+.dashboard-list > li {
+    display: grid;
+    grid-template-columns: 20px 1fr;
+    align-items: center;
+    gap: inherit;
+}
+
+.dashboard-list > li > img {
+	width: 20px;
+}
