--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,8 @@ table {
 }
 
 .dashboard-header,
-.header-top {
+.header-top,
+.card-container {
 	position: relative;
 	top: 10px;
 }
@@ -143,12 +144,8 @@ table {
 .header {
 	display: grid;
 	grid-template-rows: 1fr 2fr;
-	font-family: var(--font-bold);
-}
-
-.header-top,
-.header-bottom {
 	padding-left: 30px;
+	font-family: var(--font-bold);
 }
 
 .header-top,
@@ -223,5 +220,44 @@ table {
 }
 
 .main-content {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	grid-auto-flow: row;
+	padding-left: 20px;
 	background-color: rgba(128, 128, 128, 0.5);
+}
+
+.section-titles {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column: span 2;
+	font-family: var(--font-bold);
+	padding-top: 30px;
+}
+
+.card-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 20px;
+}
+
+.card {
+	display: grid;
+	grid-auto-flow: row;
+	height: 150px;
+	width: 300px;
+	border-style: none;
+	border-radius: 5px;
+	box-shadow: 1px 4px 4px 0px #00000080;
+	padding-left: 10px;
+	border-left: 5px solid orange;
+	background-color: white;
+}
+
+.card > .card-title {
+	font-family: var(--font-bold);
+}
+
+.card > .card-text {
+	font-family: var(--font-thin);
 }
